# Nona

./: CMakeLists.txt  LICENSE  README.md  balls.txt  compile.bat  compile.sh
config/: client.json  commands.json  splashes.json  variables.json
src/: client.cpp  client.h  index.cpp  index.h
src/cogs/channels/: create.cpp  create.h  delete.cpp  delete.h
src/events/: on_ready.cpp  on_ready.h
src/interface/: command_worker.cpp  command_worker.h  loadCLI.cpp  loadCLI.h
src/misc/: commandValidating.cpp  help.cpp  time.cpp  time.h  validate_command.cpp
src/redis/: dispatcher.cpp  dispatcher.h  precache.h  precaching.cpp  precaching.h  rate_limiter.cpp
